# Axial-Orchestrator-MCP

./: Cargo.toml  README.md
.devcontainer/base/: Dockerfile  devcontainer.json
.devcontainer/docker/: devcontainer.json
.devcontainer/forensic/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.devcontainer/scripts/: post-create.sh  setup-forensic.sh
.github/workflows/: ci.yml
apps/axial-command-center/: package.json
apps/axial-command-center/src/: App.vue
apps/axial-command-center/src-tauri/: Cargo.toml  tauri.conf.json
apps/axial-command-center/src-tauri/src/: main.rs
apps/axial-vscode-extension/: package.json
apps/axial-vscode-extension/src/: extension.ts
crates/axial-bytebot/: Cargo.toml
crates/axial-bytebot/src/: lib.rs
crates/axial-cli/: Cargo.toml
crates/axial-cli-harness/: Cargo.toml
crates/axial-cli-harness/src/: lib.rs
crates/axial-cli-harness/src/adapters/: aider.rs  claude.rs  cline.rs  codex.rs  cursor.rs  mod.rs
crates/axial-cli/src/: daemon.rs  doctor.rs  main.rs
crates/axial-core/: Cargo.toml
crates/axial-core/src/: lib.rs  schemas.rs
crates/axial-git/: Cargo.toml
crates/axial-git/src/: lib.rs
crates/axial-isolate/: Cargo.toml
crates/axial-isolate/src/: lib.rs
crates/axial-ledger/: Cargo.toml
crates/axial-ledger/src/: lib.rs
crates/axial-perception/: Cargo.toml
crates/axial-perception/src/: lib.rs
crates/axial-pty/: Cargo.toml
crates/axial-pty/src/: lib.rs
crates/axial-router/: Cargo.toml
crates/axial-router/src/: lib.rs
crates/axial-router/src/adapters/: mod.rs  ollama.rs  openai.rs
crates/axial-shield/: Cargo.toml
crates/axial-shield/src/: lib.rs  proxy.rs  truth.rs
docs/: DEVELOPER.md
docs/phases/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md
plan_examples/: hello.json
scripts/: demo-phase-0.sh  demo-phase-1.sh  demo-phase-2.sh  demo-phase-3.sh  demo-phase-4.sh  demo-phase-5.sh  demo-phase-6.sh  doctor.sh  post-create.sh  setup-engines.sh
