[workspace]
resolver = "2"
members = [
    "crates/axial-core",
    "crates/axial-ledger",
    "crates/axial-router",
    "crates/axial-shield",
    "crates/axial-pty",
    "crates/axial-git",
    "crates/axial-bytebot",
    "crates/axial-cli-harness",
    "crates/axial-cli",
    "crates/axial-isolate",
    "crates/axial-perception",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AXIAL Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
axial-core = { path = "crates/axial-core" }
axial-ledger = { path = "crates/axial-ledger" }
axial-router = { path = "crates/axial-router" }
axial-shield = { path = "crates/axial-shield" }
axial-pty = { path = "crates/axial-pty" }
axial-git = { path = "crates/axial-git" }
axial-bytebot = { path = "crates/axial-bytebot" }
axial-cli-harness = { path = "crates/axial-cli-harness" }

tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
schemars = "0.8"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
git2 = "0.18"
gix = "0.62"
tempfile = "3.10"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
json-patch = "1.2"
colored = "2.1"
governor = "0.6"
bincode = "1.3"
axum = "0.7"
fd-lock = "4.0"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
grep = "0.3"
walkdir = "2.5"
tower-http = { version = "0.5", features = ["cors"] }
