[package]
name = "axial-bytebot"
version.workspace = true
edition.workspace = true

[dependencies]
axial-core = { path = "../axial-core" }
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tempfile.workspace = true
fd-lock = "4.0"
