[package]
name = "axial-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "axial"
path = "src/main.rs"

[dependencies]
axial-core = { path = "../axial-core" }
axial-ledger = { path = "../axial-ledger" }
axial-router = { path = "../axial-router" }
axial-shield = { path = "../axial-shield" }
axial-pty = { path = "../axial-pty" }
axial-git = { path = "../axial-git" }
axial-bytebot = { path = "../axial-bytebot" }
axial-cli-harness = { path = "../axial-cli-harness" }
axial-isolate = { path = "../axial-isolate" }
axial-perception = { path = "../axial-perception" }

tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-util = { version = "0.7", features = ["codec"] }
parity-tokio-ipc = "0.9"
futures-util = "0.3"
colored = "2.1"
