[package]
name = "axial-ledger"
version.workspace = true
edition.workspace = true

[dependencies]
axial-core = { path = "../axial-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
bincode = "1.3"
